# minimum-assignment-fastapi

./: .flake8  .gitignore  CORE_IMPLEMENTATION.md  EXTREME_SCALE_ARCHITECTURE.md  NEXT_STEPS.md  README.md  SCALING_IMPLEMENTATION.md  alembic.ini  pyproject.toml  pyrightconfig.json  requirements.txt
alembic_migrations/: env.py
alembic_migrations/versions/: 42a729e8af08_initial_migration_emission_models.py  V20251124_120139_02010423781e_create_emission_factors_table.py  V20251124_120145_c81de53709ac_create_electricity_activities_table.py  V20251124_120146_787e683ffe9f_create_air_travel_activities_table.py  V20251124_120147_39ba91f95107_create_goods_services_activities_table.py  V20251124_120148_2d0c56b37799_create_emission_results_table.py  V20251125_015530_a1b2c3d4e5f6_add_indexes_for_emissions_filtering_and_sorting.py  V20251125_020800_b7c8d9e0f1a2_create_emission_summaries_table.py
app/: __init__.py  create_app.py  main.py
app/api/: __init__.py  activities.py  aggregations.py  calculations.py  factors.py  reports.py  summaries.py
app/cfg/: development.toml  production.toml  test.toml
app/core/: config.py  dependencies.py
app/database/: __init__.py  base.py
app/database/repositories/: __init__.py  activity.py  base.py  emission_factor.py  emission_result.py  emission_summary.py
app/database/schemas/: __init__.py  activity_data.py  emission_factor.py  emission_result.py  emission_summary.py
app/database/session_manager/: __init__.py  db_session.py  exceptions.py
app/pydantic_models/: activity.py  calculation.py  emission_factor.py  emission_summary.py
app/services/: seed_database.py
app/services/aggregators/: __init__.py  (+1 more)
app/test/: conftest.py
app/utils/: constants.py
app/workers/: __init__.py  celery_app.py.example
docs/: ASSIGNMENT.md  CORE_IMPLEMENTATION.md
scripts/: seed_database.py
(+23 files in other folders)
